# template-python

./: .dockerignore  .editorconfig  .flake8  .gitignore  .releaserc.yml  .yamllint.yaml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  checks.yml  lint.yml  publish-pr.yml  publish.yml  release.yml  test.yml
src/my_app/: hello_world.py  main.py
tests/: test_my_app.py
