[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "My application"
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
logging = "^0.4.9.6"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.semantic_release]
version_variable = [
    "my_app/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.scripts]
my-app = "my_app.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
