[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "My application"
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.6"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.7.10"
mypy = "^1.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.semantic_release]
version_variable = [
    "src/my_app/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.scripts]
my-app = "my_app.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
